fixed path link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="pinterest" content="nopin" />
-    <link rel="icon" type="image/x-icon" href="../public/document_icon.png">
+    <link rel="icon" type="image/x-icon" href="../assets/document_icon.png">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="lander.css">
     <title>NDAer Lander</title>
@@ -14,17 +14,17 @@
     <div class="app">
         <div class="wrap  ">   
             <!-- <div class="ndaer-logo-box">
-                <img src="../public/NDAer_logo_copy.png" alt="NDAer Logo">
+                <img src="../assets/NDAer_logo_copy.png" alt="NDAer Logo">
             </div> -->
             <div class="container doc-combo"> 
                 <div class="header doc-combo">
                     <div class="header-wrap ">
                         <div class="header-copy">
-                            <img src="../assets/NDAer_logo_copy.png" alt="NDAer Logo"/>
+                            <img src="assets/NDAer_logo_copy.png" alt="NDAer Logo"/>
                         </div>
                         <div class="settings-button">
                             <a href="/dashboard">
-                                <img src="../assets/envelope-fill.svg" alt="Settings Icon" />
+                                <img src="assets/envelope-fill.svg" alt="Settings Icon" />
                             </a>
                         </div>
                     </div>      
@@ -47,7 +47,7 @@
                         <div class = "bounce-container">
                             <div class="port-logo-box blink bounce">
                                 <a href = "https://ajphnx.github.io/Resume/">
-                                <img src="../assets/SelfPortrait_Blink.gif" alt="AJPHNX Logo" >
+                                <img src="assets/SelfPortrait_Blink.gif" alt="AJPHNX Logo" >
                                 </a>
                             
                             </div>
