add portfolio link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                     <div class="grad_div">
                         <div class="type-wrapper bottom-link">
                             <div class="typing">
+                                <a href = "https://ajphnx.github.io/Resume/">
                                 ajphnx.github.io/resume for more
+                                </a>
                             </div>
                         </div>
                     </div>
