Style nudges: footer

--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
             </div>
         </div>
     </div>
-    <div class="bottom-left">@ajphnx</div>
-    <div class="bottom-right">.html | .css</div>
+    <div class="footer">
+        <div class="bottom-left">@ajphnx</div>
+        <div class="bottom-center">design <span class="flip-h">&</span>& development</div>
+        <div class="bottom-right">.html | .css</div>
+    </div>
 </body>
 </html>
 
