--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                             <div class="header-copy">
                                 <img src="assets/NDAer_logo_copy.png" alt="NDAer Logo"/>
                             </div>
-                            <div class="settings-button">
+                            <!-- <div class="settings-button">
                                 <a href="/dashboard">
                                     <img src="assets/envelope-fill.svg" alt="Settings Icon" />
                                 </a>
-                            </div>
+                            </div> -->
                         </div>      
                     </div> 
                     <div class="body">
@@ -66,6 +66,12 @@
                                 <div class="grad_div "></div>
                             </div><canvas  id="canvas" ></canvas>
                             </div>
+                        </div>
+                        <div >&nbsp;</div>
+                        <div class="mail-button doc-combo">
+                            <a href="mailto:ajphnx@gmail.com">
+                                <img src="assets/envelope-fill.svg" alt="Settings Icon" />
+                            </a>
                         </div>
                     </div>
                 </div>
